--- a/sites_conformes/sites_conformes/templates/blocks/notice.html
+++ b/sites_conformes/sites_conformes/templates/blocks/notice.html
@@ -5,7 +5,7 @@
 <div class="fr-notice fr-notice--{{ settings.sites_conformes_content_manager.CmsDsfrConfig.notice_type|default:'info' }}">
   <div class="fr-container">
     <div class="fr-notice__body">
-      {{ settings.sites_conformes_content_manager.CmsDsfrConfig.notice_title | richtext | richtext_p_add_class:"fr-notice__title" | richtext_p_add_class:settings.content_manager.CmsDsfrConfig.notice_icon_class }}
+      {{ settings.sites_conformes_content_manager.CmsDsfrConfig.notice_title | richtext | richtext_p_add_class:"fr-notice__title" | richtext_p_add_class:settings.sites_conformes_content_manager.CmsDsfrConfig.notice_icon_class }}
       {% if settings.sites_conformes_content_manager.CmsDsfrConfig.notice_description %}
         {{ settings.sites_conformes_content_manager.CmsDsfrConfig.notice_description | richtext | richtext_p_add_class:"fr-notice__desc" }}
       {% endif %}
